// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullScreenMessage renders as expected in landscape mode 1`] = `
<MessageWrapper
  style={
    [
      {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      {},
      {},
      {},
    ]
  }
>
  <MessageLayout
    hasButtons={false}
    hasPrimaryButton={false}
    hasRenderableImage={false}
    hasSecondaryButton={false}
    layout="FULL_SCREEN"
    orientation="landscape"
    shouldRenderMessage={true}
    styles={
      {
        "body": [
          {
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {},
          undefined,
        ],
        "buttonsContainer": {
          "flexDirection": "row",
          "justifyContent": "center",
        },
        "container": [
          {
            "flex": 1,
            "padding": 16,
          },
          {},
          {},
        ],
        "contentContainer": {
          "flex": 1,
          "flexDirection": "row",
        },
        "header": [
          {
            "fontSize": 18,
            "fontWeight": "600",
            "lineHeight": 27,
          },
          {},
          undefined,
        ],
        "iconButton": {
          "container": [
            {
              "alignSelf": "flex-start",
              "marginBottom": 8,
              "marginLeft": "auto",
              "marginRight": 8,
            },
            undefined,
          ],
          "iconColor": undefined,
        },
        "image": [
          {
            "height": null,
            "width": null,
          },
          undefined,
        ],
        "imageContainer": {
          "alignItems": "center",
          "justifyContent": "center",
          "margin": 12,
        },
        "primaryButton": {
          "container": [Function],
          "text": [
            {
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
              "textAlign": "center",
            },
            {},
            {},
          ],
        },
        "secondaryButton": {
          "container": [Function],
          "text": [
            {
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
              "textAlign": "center",
            },
            {},
            {},
          ],
        },
        "textContainer": {
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 8,
        },
      }
    }
    testID="inappmessaging-fullscreen-dialog"
  />
</MessageWrapper>
`;

exports[`FullScreenMessage renders as expected in portrait mode 1`] = `
<MessageWrapper
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      {},
      {},
      {},
    ]
  }
>
  <MessageLayout
    hasButtons={false}
    hasPrimaryButton={false}
    hasRenderableImage={false}
    hasSecondaryButton={false}
    layout="FULL_SCREEN"
    orientation="portrait"
    shouldRenderMessage={true}
    styles={
      {
        "body": [
          {
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 24,
          },
          {},
          undefined,
        ],
        "buttonsContainer": {
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": "auto",
        },
        "container": [
          {
            "flex": 1,
            "padding": 16,
          },
          {},
          {},
        ],
        "contentContainer": {
          "flex": 1,
        },
        "header": [
          {
            "fontSize": 18,
            "fontWeight": "600",
            "lineHeight": 27,
          },
          {},
          undefined,
        ],
        "iconButton": {
          "container": [
            {
              "alignSelf": "flex-start",
              "marginBottom": 8,
              "marginLeft": "auto",
              "marginRight": 8,
            },
            undefined,
          ],
          "iconColor": undefined,
        },
        "image": [
          {
            "height": null,
            "width": null,
          },
          undefined,
        ],
        "imageContainer": {
          "alignItems": "center",
          "margin": 12,
        },
        "primaryButton": {
          "container": [Function],
          "text": [
            {
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
              "textAlign": "center",
            },
            {},
            {},
          ],
        },
        "secondaryButton": {
          "container": [Function],
          "text": [
            {
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
              "textAlign": "center",
            },
            {},
            {},
          ],
        },
        "textContainer": {
          "marginVertical": 12,
          "paddingHorizontal": 8,
        },
      }
    }
    testID="inappmessaging-fullscreen-dialog"
  />
</MessageWrapper>
`;
